--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<h1>My First Code</h1>
+<!DOCTYPE html>
+<html>
+     <head>
+	     <meta charset="UTF-8">
+	     <title>第一个程序</title>
+		 <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
+		 <meta name="keywords" content="第一个">
+		 <meta name="description" content="第一个程序">
+		 <meta name="author" content="liu">
+		 <style>
+		     body(
+			    background-image: url("https://ae01.alicdn.com/kf/Hf9d723348e81482f853a6d8a4ae46833h.jpg")
+			 )
+		 </style>
+	 </head>
+	 <body>
+	     <h1>就喜欢学习</h1>
+		 <p>真的很想一直学习</p>
+	 </body>
+</html>
+
