--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
 		 <meta name="keywords" content="第一个">
 		 <meta name="description" content="第一个程序">
 		 <meta name="author" content="liu">
-		 <style>
-		     body(
-			    background-image: url("https://ae01.alicdn.com/kf/Hf9d723348e81482f853a6d8a4ae46833h.jpg")
-			 )
-		 </style>
+                 <body background="https://ae01.alicdn.com/kf/Hf9d723348e81482f853a6d8a4ae46833h.jpg">
+	     
+	     
 	 </head>
 	 <body>
 	     <h1>就喜欢学习</h1>
