--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		 <meta name="author" content="liu">
 	       <style>
 		     body{
-			    background-image:url("https://ae01.alicdn.com/kf/Hf9d723348e81482f853a6d8a4ae46833h.jpg");
+			    background-image:url("https://ae01.alicdn.com/kf/Hf9d723348e81482f853a6d8a4ae46833h.jpg")
 			   
 		            
 		       }
