--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		 <meta name="author" content="liu">
 	       <style>
 		     body{
-			    background-image:url("https://ae01.alicdn.com/kf/H9bfcfe1c304844808969007ee1ac7e54p.jpg");
+			    background-image:url("https://ae01.alicdn.com/kf/H3c7370aee11f425498121bc24dc54cb8j.jpg");
 		            background-repeat:no-repeat;
 			   
 		            
@@ -20,7 +20,7 @@
 	 </head>
 	 <body>
 	     <center><h1>就喜欢学习</h1></center>
-             <p>真的很想一直学习</p>
+              <center> <p>真的很想一直学习</p></center>
 	 </body>
 </html>
 
