--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	     
 	 </head>
 	 <body>
-	     <center><div style="color:red;font-size:50px">就喜欢学习</div></body></center>
+	     <center><div style="color:red;font-size:50px">就喜欢学习</div></center>
               <center> <p>真的很想一直学习</p></center>
 	 </body>
 </html>
