--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
      <head>
+	     <link rel="shortcut icon" href="https://ae01.alicdn.com/kf/H82d0b40f090a426bbad58cc2448c6553h.png" type="image/x-icon" />
 	     <meta charset="UTF-8">
 	     <title>第一个程序</title>
 		 <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
