--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
 	     <center><div style="color:red;font-size:50px">就喜欢学习</div></center> //定义大标题
               <center> <p>真的很想一直学习</p></center>
 	 </body>
+	<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28798452&auto=1&height=66"></iframe>
+        //添加网易云播放器
 </html>
 
