--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
      <head>
 	     <link rel="shortcut icon" href="https://ae01.alicdn.com/kf/H82d0b40f090a426bbad58cc2448c6553h.png" type="image/x-icon" />
-	    
+	    <!-- 
+             定义logo 
+             -->
 	     <meta charset="UTF-8">
 	     <title>第一个程序</title>
 		 <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
@@ -22,9 +24,14 @@
 	 </head>
 	 <body>
 	     <center><div style="color:red;font-size:50px">就喜欢学习</div></center>
+	      <!-- 
+             定义标题
+             -->
               <center> <p>真的很想一直学习</p></center>
 	 </body>
 	<center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28798452&auto=1&height=66"></iframe></center>
-        //添加网易云播放器
+           <!-- 
+             添加网易云播放器
+             -->
 </html>
 
