--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 		            
 		       }
 		 </style>
-	     //定义背景
+	   <!-- 
+             定义背景
+             -->
 	     
 	 </head>
 	 <body>
@@ -30,8 +32,8 @@
               <center> <p>真的很想一直学习</p></center>
 	 </body>
 	<center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28798452&auto=1&height=66"></iframe></center>
-           <!-- 
+            <!-- 
              添加网易云播放器
-             -->
+            -->
 </html>
 
