--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             <!-- 
              添加网易云播放器
             -->
-         <center><a href="http://searobber.top">Cloud9的网站哦</a> </center>
+        <a href="#" style="display: block; text-align: center;">测试</a>
 </html>
 
