--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             <!-- 
              添加网易云播放器
             -->
-        <a href="#" style="display: block; text-align: center;">测试</a>
+        <a href="http://searobber.top/" style="display: block; text-align: center;">Cloud9的网站</a>
 </html>
 
