--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
              定义logo 
              -->
 	     <meta charset="UTF-8">
-	     <title>第一个程序</title>
+	     <title>你居然发现我了</title>
 		 <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
-		 <meta name="keywords" content="第一个">
-		 <meta name="description" content="第一个程序">
+		 <meta name="keywords" content="html">
+		 <meta name="description" content="html工厂">
 		 <meta name="author" content="liu">
 	       <style>
 		     body{
@@ -25,11 +25,11 @@
 	     
 	 </head>
 	 <body>
-	     <center><div style="color:red;font-size:50px">就喜欢学习</div></center>
+	     <center><div style="color:red;font-size:50px">我居然被你发现了</div></center>
 	      <!-- 
              定义标题
              -->
-              <center> <p>真的很想一直学习</p></center>
+              <center> <p>这只是一个html测试页面，既然来了，就听听歌吧</p></center>
 	 </body>
 	<center><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=28798452&auto=1&height=66"></iframe></center>
             <!-- 
