--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	     
 	 </head>
 	 <body>
-	     <center><div style="color:red;font-size:50px">Welcome</div></center>
+	     <center><div style="font-size:50px">Welcome</div></center>
 	      <!-- 
              定义标题
              -->
@@ -35,6 +35,6 @@
             <!-- 
              添加网易云播放器
             -->
-          <a href="http://searobber.top" style="display: block; text-align: center;">Cloud9的网站</a>
+          <a href="http://searobber.top" style="display: block; text-align: center;">Cloud9 の World</a>
 </html>
 
