--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
 		 <meta name="keywords" content="html">
 		 <meta name="description" content="html factory">
 		 <meta name="author" content="liu">
-	       <style>
-		     body{
-			    background-image:url("https://ae01.alicdn.com/kf/H3c7370aee11f425498121bc24dc54cb8j.jpg");
-		            background-repeat:no-repeat;
-			   
-		            
-		       }
-		 </style>
+             <body>
+                 <div id="Layer1" style="position:fixed; left:0px; top:0px; width:100%; height:100%">  
+                 <img src="https://ae01.alicdn.com/kf/H029ebd19b34240b6942e90b9dd2600b3u.jpg" width="100%" height="100%"/>  
+            </body>
+
 	     <!-- 
              定义背景
              -->
