--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 		 <meta name="keywords" content="html">
 		 <meta name="description" content="html factory">
 		 <meta name="author" content="liu">
-             <div class="msg_desc">
-             <img style="max-width:100%;overflow:hidden;" src="https://ae01.alicdn.com/kf/H029ebd19b34240b6942e90b9dd2600b3u.jpg" alt="">
-             </div>
+              <body> 
+
+                  <div style="position:absolute; width:100%; height:100%; z-index:-1; left:0; top:0;"> 
+                  <img src="https://ae01.alicdn.com/kf/H029ebd19b34240b6942e90b9dd2600b3u.jpgth.jpg" height="100%" width="100%" style="left:0; top:0;"> 
+                  </div> 
+              </body> 
 	     <!-- 
              定义背景
              -->
