--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 		 <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
 		 <meta name="keywords" content="html">
 		 <meta name="description" content="html factory">
-		 <meta name="author" content="liu">
-              <body> 
+		 <meta name="author" content="searobbers">
+            <div style="width:360px;height:200px;border:red 1px solid; margin-left:100px; margin-top:300px; position:relative; ">
+	    <img style="position:absolute;left:0px;top:0px;width:100%;height:100%;z-Index:-1; border:1px solid blue" src="https://ae01.alicdn.com/kf/H029ebd19b34240b6942e90b9dd2600b3u.jpg" />
+	    </div>
+ 
 
-                  <div style="position:absolute; width:100%; height:100%; z-index:-1; left:0; top:0;"> 
-                  <img src="https://ae01.alicdn.com/kf/H029ebd19b34240b6942e90b9dd2600b3u.jpgth.jpg" height="100%" width="100%" style="left:0; top:0;"> 
-                  </div> 
-              </body> 
 	     <!-- 
              定义背景
              -->
