--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 		 <meta name="keywords" content="html">
 		 <meta name="description" content="html factory">
 		 <meta name="author" content="searobbers">
-            <div style="width:100%100%;height:100%;border:red 1px solid; margin-left:100px; margin-top:300px; position:relative; ">
-	    <img style="position:absolute;left:0px;top:0px;width:100%;height:100%;z-Index:-1; border:1px solid blue" src="https://ae01.alicdn.com/kf/H029ebd19b34240b6942e90b9dd2600b3u.jpg" />
-	    </div>
- 
+              <body background="https://ae01.alicdn.com/kf/H029ebd19b34240b6942e90b9dd2600b3u.jpg"
+                style=" background-repeat:no-repeat ;
+                background-size:100% 100%; 
+                background-attachment: fixed;" 
+             > 
 
 	     <!-- 
              定义背景
