--- a/index.html
+++ b/index.html
@@ -11,12 +11,85 @@
 		 <meta name="keywords" content="html">
 		 <meta name="description" content="html factory">
 		 <meta name="author" content="searobbers">
-              <body background="https://ae01.alicdn.com/kf/H7493c573ab204288a3b82f433c13bae3w.jpg"
-                style=" background-repeat:no-repeat ;
-                background-size:100% 100%; 
-                background-attachment: fixed;" 
-             > 
 
+<style>
+
+ *{  
+
+            margin: 0px;  
+
+            padding: 0px;  
+
+        }  
+
+        video{  
+
+            position: fixed;  
+
+            right: 0px;  
+
+            bottom: 0px;  
+
+            min-width: 100%;  
+
+            min-height: 100%;  
+
+            height: auto;  
+
+            width: auto;  
+
+            /*加滤镜*/
+
+            /*filter: blur(15px); //背景模糊设置 */
+
+            /*-webkit-filter: grayscale(100%);*/  
+
+            /*filter:grayscale(100%); //背景灰度设置*/  
+
+            z-index:-11
+
+        }  
+
+        source{  
+
+            min-width: 100%;  
+
+            min-height: 100%;  
+
+            height: auto;  
+
+            width: auto;  
+
+        } 
+
+		p{
+
+		    width: 100%;
+
+			text-align: center;
+
+			font-size: 40px;
+
+			color: white;
+
+		}
+
+             </style>
+
+             <body>
+
+
+              <video autoplay loop muted>
+
+            <source src="./movie.mp4" type="video/mp4"  />
+
+            Your browser does not support the video tag.
+
+              </video>
+
+ 
+
+           </body>
 	     <!-- 
              定义背景
              -->
