--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
 		 <meta name="description" content="html factory">
 		 <meta name="author" content="searobbers">
 
-                 body{
-               
-	            background-image: url(https://ae01.alicdn.com/kf/H94c59791281045cd962f8d4199c3c872M.gif)
-	            background-position: center center;
-                    background-repeat: no-repeat;
-                    background-attachment: fixed; 
-                    background-size: cover;
-			}
+<img src = 'https://ae01.alicdn.com/kf/H94c59791281045cd962f8d4199c3c872M.gif' border = '0' width = '100%' height = '100%' style = 'position: absolute; left:0px; top:0px; z-index: -1'>
 
 	     <!-- 
              定义背景
