--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-<title>优启梦免费图床 - 阿里巴巴稳定图片外链服务 - www.xiaoheizy.com</title>
-<meta name="keywords" content="uomg,优启梦,新浪图床,淘宝图床,图片外链,稳定图床,免费图床,网络图片,图片库,相册,网络相册,批量上传,批量生成">
-<meta name="description" itemprop="description" content="优启梦永久免费图床，稳定图片外链；支持批量上传,即时预览,不限制流量,不限制外链数,永久保存,阿里巴巴图片服务器,全网CDN图床,高速稳定,支持网页,手机上传,无需插件,支持JPG,GIF,PNG等文件格式,微博图床,土豆是个好图床"/>
+<title>Cloud9免费图床 - 阿里巴巴稳定图片外链服务 - www.xiaoheizy.com</title>
+<meta name="keywords" content="uomg,Cloud9,新浪图床,淘宝图床,图片外链,稳定图床,免费图床,网络图片,图片库,相册,网络相册,批量上传,批量生成">
+<meta name="description" itemprop="description" content="Cloud9永久免费图床，稳定图片外链；支持批量上传,即时预览,不限制流量,不限制外链数,永久保存,阿里巴巴图片服务器,全网CDN图床,高速稳定,支持网页,手机上传,无需插件,支持JPG,GIF,PNG等文件格式,微博图床,土豆是个好图床"/>
 <link rel="stylesheet" href="https://lib.baomitu.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://lib.baomitu.com/prettify/latest/prettify.css">
 <script rel="stylesheet" src="https://lib.baomitu.com/layer/3.1.1/mobile/layer.js"></script>
@@ -53,7 +53,7 @@
                 <span class="title1"><b>温馨提示:</b> 本站不存储且无权管理上传的图源，图源均存放在新浪服务器，切勿上传违反法规图源，否则后果自负。</span>
             </div>
             <div class="footer text-center">
-                <a target="_blank" class="title1">© 2019 Powered by 小黑资源网.</a>
+                <a target="_blank" class="title1">© 2019 Powered by Cloud9</a>
             </div>
         </div>
     </div>
