--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>Cloud9免费图床 - 阿里巴巴稳定图片外链服务 - www.img.searobber.top</title>
 <meta name="keywords" content="uomg,Cloud9,新浪图床,淘宝图床,图片外链,稳定图床,免费图床,网络图片,图片库,相册,网络相册,批量上传,批量生成">
 <meta name="description" itemprop="description" content="Cloud9永久免费图床，稳定图片外链；支持批量上传,即时预览,不限制流量,不限制外链数,永久保存,阿里巴巴图片服务器,全网CDN图床,高速稳定,支持网页,手机上传,无需插件,支持JPG,GIF,PNG等文件格式,微博图床,土豆是个好图床"/>
-<link rel="icon" type="image/x-ico" href=".https://ae01.alicdn.com/kf/H82f71dbe64f148f3bd392cdbd4ffc11fd.png" />
+<link rel="icon" type="image/x-ico" href="https://ae01.alicdn.com/kf/H82f71dbe64f148f3bd392cdbd4ffc11fd.png" />
 <link rel="stylesheet" href="https://lib.baomitu.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://lib.baomitu.com/prettify/latest/prettify.css">
 <script rel="stylesheet" src="https://lib.baomitu.com/layer/3.1.1/mobile/layer.js"></script>
